<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_todo">Add Todo</string>
    <string name="select_date">Press to select the date</string>
    <string name="order_by">Order By</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_time">Press to select the time</string>
    <string name="todo_name">Todo Name</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="add">ADD</string>
    <string name="priority">Priority</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="priority_add_bottom_sheet">Priority :</string>

</resources>